# SpaceVim

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .project_alt.json  .projections.json  .projections.toml  .remarkrc.js  .stylua.toml  .travis.yml  .vim-bookmarks  .vintrc.yaml  1.2.5  2022-10-25-10-54-36.md  2022-10-25-17-59-55.md  BingSiteAuth.xml  CODEKK.FLAGSHIP.SECURITY.mx-d  CODE_OF_CONDUCT.md  CONTRIBUTING.cn.md  CONTRIBUTING.md  LICENSE  Makefile  README.cn.md  README.md  README_zh_cn.md  SECURITY.md  SERSADMINI~1APPDATAocaltempvic3f57.tmp  TODO.md  addon-info.json  allocation  appveyor.yml  coc-settings.json  codecov.yml  display screen  filetype.vim  fuck.txt  fuck.vim  ginit.vim  (+9 more)
.SpaceVim.d/: README.md  ReleasePostCheckList.md  ReleasePreCheckList.md  init.lua  init.vim  languages.json  projections.toml  tasks.toml
.ci/: after_failure.sh  after_success.sh  bootstrap  build-production  detach_plugin.sh  install.ps1  install.sh  push_baidu.sh  script.sh  update_mirror.sh
.gitee/: ISSUE_TEMPLATE.md
.github/: CODEOWNERS  FUNDING.yml  (+3 more)
bundle/telescope-fzf-native.nvim/: .clang-format  .gitignore  .luacheckrc  CMakeLists.txt  Makefile  README.md
bundle/telescope-fzf-native.nvim/.github/: FUNDING.yml
bundle/telescope-fzf-native.nvim/.github/workflows/: ci.yml  lint.yml
bundle/telescope-fzf-native.nvim/lua/: fzf_lib.lua
bundle/telescope-fzf-native.nvim/lua/telescope/_extensions/: fzf.lua
bundle/telescope-fzf-native.nvim/src/: fzf.c  fzf.h
bundle/telescope-fzf-native.nvim/test/: fzf_lib_spec.lua  minrc.vim  test.c
(+8222 files in other folders)
